--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
-load("//rust:rust.bzl", "error_format", "extra_rustc_flags", "capture_clippy_output")
+load("//rust:rust.bzl", "capture_clippy_output", "error_format", "extra_rustc_flags")
 
 exports_files(["LICENSE"])
 
